--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,13 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="node_modules/chart.js/src/chart.js"></script>
+
   <script src="https://use.fontawesome.com/05c526f293.js"></script>
 </head>
 <body>
