--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,13 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.css" rel="stylesheet"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
   <script src="https://use.fontawesome.com/05c526f293.js"></script>
+
 </head>
 <body>
 <app-root>Loading...</app-root>
+<script src="assets/js/moment.js"></script>
+<script src="assets/js/moment-precise-range.js"></script>
+
 </body>
 </html>
